[gd_scene load_steps=2 format=3 uid="uid://nameplate"]

[ext_resource type="Script" path="res://src/ui/npc_nameplate.gd" id="1_nameplate"]

[node name="NpcNameplate" type="Node2D"]
script = ExtResource("1_nameplate")

[node name="Background" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -8.0
offset_right = 30.0
offset_bottom = 8.0
color = Color(0.1, 0.1, 0.1, 0.5)

[node name="NameLabel" type="Label" parent="."]
offset_left = -28.0
offset_top = -6.0
offset_right = -2.0
offset_bottom = 6.0
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 8
text = "NPC Name"
vertical_alignment = 1

[node name="EmojiLabel" type="Label" parent="."]
offset_left = 2.0
offset_top = -6.0
offset_right = 28.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 10
text = "üßç"
horizontal_alignment = 2
vertical_alignment = 1